--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -14,6 +14,10 @@ services:
     build: ./client
     ports:
       - "8080:3000"
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - WDS_SOCKET_PORT=0
+    command: npm start
     volumes: 
-      - ./client/src/:/client/src/
+      - ./client/src/:/app/src/
       
